--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: content-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     margin: 0;
 }
@@ -9,4 +13,8 @@ body {
 .app {
     width: 50%;
     margin: 0 auto;
+}
+
+.error-block {
+    border: 0.2rem solid red;
 }
